--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next-sanity": "^9.0.6",
     "react": "^18",
     "react-dom": "^18",
-    "sanity": "^3.38.0"
+    "sanity": "^3.38.0",
+    "sanity-plugin-mux-input": "^2.3.4"
   },
   "devDependencies": {
     "@types/node": "^20",
