--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "next": "14.2.2",
     "next-sanity": "^9.0.6",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
     "sanity": "^3.38.0",
