--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cookie": "^0.6.0",
     "next": "14.2.2",
     "next-sanity": "^9.0.6",
     "nodemailer": "^6.9.13",
